--- a/kk-form.html
+++ b/kk-form.html
@@ -84,7 +84,7 @@ input[type=submit]:hover {
 
 <body>
 			<div class="contactContainer">
-				<form action="./kk-form-process.php" method="POST">
+				<form action="ondinaconsulting.github.io/kk-form-process.php" method="POST">
 
 					<label for="name"><p3><em>Name</em></p3></label>
 					<input type="text" id="name" name="name" placeholder="Your name...">
