--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ input[type=submit]:hover {
 			<br><br>
 			</p3>
 
-			<iframe src='./kk-form.html' width='100%' height='500px'></iframe>		
+			<iframe src='https://kevinjbeaty.com/projects/kk-form.html' width='100%' height='500px'></iframe>		
 
 
 		</div>
@@ -566,7 +566,7 @@ input[type=submit]:hover {
 				<br>
 				<br>
 			</p3>
-			<iframe src='./kk-form.html' width='100%' height='500px'></iframe>		
+			<iframe src='https://kevinjbeaty.com/projects/kk-form.html' width='100%' height='500px'></iframe>		
 		</div>
 	</div>
 	</div>
