--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
  
-		<link rel="shortcut icon" href="https://kevinjbeaty.com/projects/favicon.ico"/>
+		<link rel="shortcut icon" href="https://kevinjbeaty.com/projects/kk/favicon.jpg"/>
 
 		<title>
 		Ondina Consulting
