--- a/index.html
+++ b/index.html
@@ -693,6 +693,10 @@ input[type=submit]:hover {
 	setTimeout(() => {
 		loadWork();
 	}, 100);
+	setTimeout(() => {
+		loadComm();
+		loadOrg();
+	}, 300);
 
 
 </script>
