--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ input[type=submit]:hover {
 			data.forEach(function(content) {
 				content = content.split('\t');
 				$('#CommContent').append(
-					"<em>" + content[0] + "</em><br>" + content[1] + "<br>"
+					"<em>" + content[0] + "</em><br>" + content[1] + "<br><br>"
 				);
 			});
 		}
@@ -685,7 +685,7 @@ input[type=submit]:hover {
 			data.forEach(function(content) {
 				content = content.split('\t');
 				$('#OrgContent').append(
-					"<em>" + content[0] + "</em><br>" + content[1] + "<br>"
+					"<em>" + content[0] + "</em><br>" + content[1] + "<br><br>"
 				);
 			});
 		}
