--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ input[type=submit]:hover {
 			data = data.slice(1);
 			data.forEach(function(content) {
 				content = content.split('\t');
-				$('#' + content[0]).text(content[2]);
+				$('#' + content[0]).append(content[2]);
 			});
 		}
 		});
