--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ input[type=submit]:hover {
 			data.forEach(function(content) {
 				content = content.split('\t');
 				$('#WorkContent').append(
-					"<br><em>" + content[0] + "</em><br>" + content[1] +"<br><br>"
+					"<br><em>" + content[0] + "</em><br>" + content[1] +"<br>"
 				);
 			});
 		}
