--- a/index.html
+++ b/index.html
@@ -485,7 +485,8 @@ input[type=submit]:hover {
 			<br>
 			Let's get in touch!
 			<br>
-			<a href='mailto:kaytia@ondinaconsulting.com'>kaytia@ondinaconsulting.com</a>
+			<a href='mailto:kaytia@ondinaconsulting.com'>kaytia@ondinaconsulting.com</a><br>
+			<a href='tel:303-630-9198'>303.630.9198</a>
 			<br><br>
 			</p3>
 
@@ -534,6 +535,8 @@ input[type=submit]:hover {
 				Let's get in touch!
 				<br>
 				<a href='mailto:kaytia@ondinaconsulting.com'>kaytia@ondinaconsulting.com</a>
+				<br>
+				<a href='tel:303-630-9198'>303.630.9198</a>
 				<br><br>
 				</p3>
 			</div>
