--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ h3 {
 	font-weight: 500;
 	color: black;
 	font-style: italic;
-	padding-top: 1.5em;
 }
 
 p1 {
@@ -254,6 +253,7 @@ body {
 	width: 100%;
 	height: auto;
 	vertical-align: top;
+	background-color: #c3cdd9;
 }
 
 #footer {
@@ -378,15 +378,14 @@ input[type=submit]:hover {
 	}
 	.split {
 		display: inline-block;
-		width: 46%;
+		width: 41%;
 		margin: 0;
+		margin-top: 1em%;
+		padding: 5%;
 	}
 
-	#splitLeft {
-		padding-right: 3%;
-	}
 	#splitRight {
-		padding-left: 3%;
+		margin-left: 1.5%;
 	}
 
 	#headshot {
@@ -446,7 +445,7 @@ input[type=submit]:hover {
 
 	<div class='container'>
 		<div class='line'></div>
-		<h1><img src='https://kevinjbeaty.com/projects/kk/230919-assets-12.png' class='icon'> RECENT WORK <img src='https://kevinjbeaty.com/projects/kk/230919-assets-12.png' class='icon'></h1>
+		<h1><img src='https://kevinjbeaty.com/projects/kk/230919-assets-12.png' class='icon'> PAST WORK <img src='https://kevinjbeaty.com/projects/kk/230919-assets-12.png' class='icon'></h1>
 		<div class='line'></div>
 		<div class='insetBox'>
 			<p3 id='WorkContent'>
@@ -460,14 +459,12 @@ input[type=submit]:hover {
 		<h1><img src='https://kevinjbeaty.com/projects/kk/230919-assets-13.png' class='icon'> SERVICES <img src='https://kevinjbeaty.com/projects/kk/230919-assets-13.png' class='icon'></h1>
 			<div class='line'></div>
 		<div class='split' id='splitLeft'>
-			<br>
 			<h3>COMMUNITY IMPACT</h3>
 			<br>
 			<p3 id='CommContent'>
 			</p3>
 		</div>
 		<div class='split' id='splitRight'>
-			<br>
 			<h3>ORGANIZATIONAL IMPACT</h3>
 			<br>
 			<p3 id ='OrgContent'>
