--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@ input[type=submit]:hover {
 	}
 	.split {
 		display: inline-block;
-		width: 41%;
+		width: 39%;
 		margin: 0;
-		margin-top: 1em%;
+		margin-top: 1em;
 		padding: 5%;
 	}
 
