--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@ body {
 	width: 100%;
 	height: auto;
 	vertical-align: top;
-	background-color: #c3cdd9;
+	background-color: #e1edfc;
+	margin-top: 1em;
+	padding: 5%;
 }
 
 #footer {
@@ -380,8 +382,6 @@ input[type=submit]:hover {
 		display: inline-block;
 		width: 39%;
 		margin: 0;
-		margin-top: 1em;
-		padding: 5%;
 	}
 
 	#splitRight {
