--- a/index.html
+++ b/index.html
@@ -903,6 +903,10 @@ input[type=submit]:hover {
 	$('#testContent').on( "swiperight", navLeft );
 	$('#testContent').on( "swipeleft", navRight );
 
+	setTimeout(() => {
+		autoTest();
+	}, 1000);
+
 
 </script>
 
